# axon_perf

./: README.md
neuron/: Cargo.toml
neuron/src/: main.rs
synapse/: pom.xml
synapse/src/main/kotlin/dev/amann/synapse/: SynapseApplication.kt
synapse/src/main/kotlin/dev/amann/synapse/domain/: GiftCard.kt  ReusableAggregate.kt  commands.kt  events.kt
synapse/src/main/kotlin/dev/amann/synapse/repo/: ReusableAggregateRepo.kt
synapse/src/main/kotlin/dev/amann/synapse/service/: AggregateCreationBenchmarkService.kt  AggregateUpdateBenchmarkService.kt  ReusableAggregateService.kt
synapse/src/main/kotlin/dev/amann/synapse/web/: CardResource.kt
synapse/src/main/resources/: application.yml  schema.sql
synapse/src/test/kotlin/dev/amann/synapse/: SynapseApplicationTests.kt
