[package]
name = "neuron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.0"
uuid = {version = "0.8.2", features = ["v4"] }
postgres = { version = "0.19.2", features = [ "with-uuid-0_8" ] }